Zadatak 2 - Dodano brisanje osvrta, prosječna ocjena i spremanje na local storage

--- a/homework/index.html
+++ b/homework/index.html
@@ -11,7 +11,10 @@
           src="https://media.vanityfair.com/photos/5eab453c04139b3db0bae8be/master/pass/the-sopranos-podcast.png"
           alt="Sopranos"
         />
-        <h2>The Sopranos</h2>
+        <div id="show-title">
+          <h2>The Sopranos</h2>
+          <p class="reviewRating" id="avgReviewRating"></p>
+        </div>
         <p>
           Drama series that follows the life of mob boss Tony Soprano as he
           navigates the challenges of leading a criminal organization while
