Zadatak 3 - Dodan odabir ocjene preko zvjezdica

--- a/homework/index.html
+++ b/homework/index.html
@@ -29,12 +29,28 @@
           class="reviewInput"
           placeholder="Write a review"
         ></textarea>
-        <input
-          type="number"
-          id="ratingInput"
-          class="reviewInput"
-          placeholder="Rating (1-5)"
-        />
+        <span class="star-rating">
+          <input type="radio" id="5-stars" name="rating" value="1" />
+          <label for="5-stars" class="star"
+            ><img src="star.svg" alt="5 stars"
+          /></label>
+          <input type="radio" id="4-stars" name="rating" value="2" />
+          <label for="4-stars" class="star"
+            ><img src="star.svg" alt="4 stars"
+          /></label>
+          <input type="radio" id="3-stars" name="rating" value="3" />
+          <label for="3-stars" class="star"
+            ><img src="star.svg" alt="3 stars"
+          /></label>
+          <input type="radio" id="2-stars" name="rating" value="4" />
+          <label for="2-stars" class="star"
+            ><img src="star.svg" alt="2 stars"
+          /></label>
+          <input type="radio" id="1-star" name="rating" value="5" />
+          <label for="1-star" class="star"
+            ><img src="star.svg" alt="1 star"
+          /></label>
+        </span>
         <input type="button" value="Add" id="addButton" onclick="addReview()" />
         <div id="reviews"></div>
       </div>
