Ispravak pogreske u zadnjem commitu

--- a/homework/index.html
+++ b/homework/index.html
@@ -31,25 +31,55 @@
           placeholder="Write a review"
         ></textarea>
         <span class="star-rating">
-          <input type="radio" id="5-stars" name="rating" value="1" />
-          <label for="5-stars" class="star"
-            ><img src="star.svg" alt="5 stars"
+          <input
+            type="radio"
+            id="1-stars"
+            name="rating"
+            value="1"
+            class="star-input"
+          />
+          <label for="1-stars" class="star"
+            ><img src="star.svg" alt="1 star"
           /></label>
-          <input type="radio" id="4-stars" name="rating" value="2" />
-          <label for="4-stars" class="star"
-            ><img src="star.svg" alt="4 stars"
-          /></label>
-          <input type="radio" id="3-stars" name="rating" value="3" />
-          <label for="3-stars" class="star"
-            ><img src="star.svg" alt="3 stars"
-          /></label>
-          <input type="radio" id="2-stars" name="rating" value="4" />
+          <input
+            type="radio"
+            id="2-stars"
+            name="rating"
+            value="2"
+            class="star-input"
+          />
           <label for="2-stars" class="star"
             ><img src="star.svg" alt="2 stars"
           /></label>
-          <input type="radio" id="1-star" name="rating" value="5" />
-          <label for="1-star" class="star"
-            ><img src="star.svg" alt="1 star"
+          <input
+            type="radio"
+            id="3-stars"
+            name="rating"
+            value="3"
+            class="star-input"
+          />
+          <label for="3-stars" class="star"
+            ><img src="star.svg" alt="3 stars"
+          /></label>
+          <input
+            type="radio"
+            id="4-stars"
+            name="rating"
+            value="4"
+            class="star-input"
+          />
+          <label for="4-stars" class="star"
+            ><img src="star.svg" alt="4 stars"
+          /></label>
+          <input
+            type="radio"
+            id="5-star"
+            name="rating"
+            value="5"
+            class="star-input"
+          />
+          <label for="5-star" class="star"
+            ><img src="star.svg" alt="5 stars"
           /></label>
         </span>
         <input type="button" value="Add" id="addButton" onclick="addReview()" />
